# py-web-input

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
Plan/: 2026-04-17-pairing-auth-plan.md  2026-05-07-window-backend.md
network_input/: __init__.py  __main__.py  auth.py  config.py  http_api.py  input_backends.py  models.py  runtime.py  service.py  text.py
plan/: 2026-04-17-streamlit-lan-input-plan.md
src/network_input/: config.py  http_api.py  notifications.py  service.py
tests/: test_auth.py  test_http_api.py  test_input_backends.py  test_notifications.py  test_runtime.py  test_service.py
