[project]
name = "py-network-input"
version = "0.1.0"
description = "LAN text input bridge with lightweight mobile web UI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
package = false


[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/" 
