[project]
name = "py-network-input"
version = "0.1.0"
description = "LAN text input bridge with lightweight mobile web UI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
py-network-input = "network_input.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["network_input*"]
exclude = ["tests*", "Plan*"]


[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/" 
